--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -172,6 +172,9 @@
         <action
             android:id="@+id/action_employeeMenuFragment_to_accListFragment"
             app:destination="@id/accListFragment" />
+        <action
+            android:id="@+id/action_employeeMenuFragment_to_creatCardFragment"
+            app:destination="@id/creatCardFragment" />
     </fragment>
     <fragment
         android:id="@+id/paymentFragment"
@@ -237,6 +240,15 @@
             app:argType="string" />
         <argument
             android:name="saldo"
+            app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/creatCardFragment"
+        android:name="com.example.moneyinc.CreatCardFragment"
+        android:label="fragment_creat_card"
+        tools:layout="@layout/fragment_creat_card" >
+        <argument
+            android:name="token"
             app:argType="string" />
     </fragment>
 </navigation>
