--- a/app/src/main/res/layout/fragment_acc_list.xml
+++ b/app/src/main/res/layout/fragment_acc_list.xml
@@ -17,15 +17,14 @@
                 android:id="@+id/Selecionar"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
+                android:layout_marginEnd="148dp"
                 android:gravity="center_vertical|left"
                 android:text="Selecionar Conta"
                 android:textColor="@color/black"
                 android:textSize="25dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/returnbutton"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
@@ -57,6 +56,16 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/pagedown"
                 app:layout_constraintTop_toBottomOf="@+id/Selecionar" />
+
+            <Button
+                android:id="@+id/returnbutton"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/ic_back"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view"
