--- a/app/src/main/res/layout/fragment_creat_card.xml
+++ b/app/src/main/res/layout/fragment_creat_card.xml
@@ -18,177 +18,176 @@
                 android:id="@+id/creatcardtext"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="52dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:gravity="center|left"
                 android:text="Criar Cartão"
-                android:textSize="40dp"
-                app:layout_constraintHorizontal_bias="0.081"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <EditText
-                android:id="@+id/idtext"
-                android:layout_width="250dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="124dp"
-                android:ems="10"
-                android:gravity="center"
-                android:hint="ID"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.503"
+                android:textColor="@color/black"
+                android:textSize="30dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/accounttext"
-                android:layout_width="250dp"
+                android:id="@+id/idtext"
+                android:layout_width="300dp"
                 android:layout_height="50dp"
+                android:layout_marginStart="46dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="46dp"
+                android:ems="10"
+                android:gravity="center"
+                android:hint="ID"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/creatcardtext" />
+
+            <EditText
+                android:id="@+id/accounttext"
+                android:layout_width="300dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="46dp"
+                android:layout_marginEnd="46dp"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Account"
-                app:layout_constraintHorizontal_bias="0.503"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/idtext"
-                tools:layout_editor_absoluteY="176dp" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/idtext" />
 
             <EditText
                 android:id="@+id/usertext"
-                android:layout_width="250dp"
+                android:layout_width="300dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="80dp"
-                android:layout_marginTop="48dp"
-                android:layout_marginEnd="80dp"
+                android:layout_marginStart="46dp"
+                android:layout_marginEnd="46dp"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="User"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/accounttext"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/accounttext" />
 
             <EditText
                 android:id="@+id/typetext"
-                android:layout_width="250dp"
+                android:layout_width="300dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="80dp"
-                android:layout_marginTop="48dp"
-                android:layout_marginEnd="80dp"
+                android:layout_marginStart="46dp"
+                android:layout_marginEnd="46dp"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Type"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="@id/usertext"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/usertext" />
 
             <EditText
                 android:id="@+id/subtypetext"
-                android:layout_width="250dp"
+                android:layout_width="300dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="80dp"
-                android:layout_marginTop="48dp"
-                android:layout_marginEnd="80dp"
+                android:layout_marginStart="46dp"
+                android:layout_marginEnd="46dp"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Subtype"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="@id/typetext"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/typetext" />
 
             <EditText
                 android:id="@+id/costperyeartext"
-                android:layout_width="250dp"
+                android:layout_width="300dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="80dp"
-                android:layout_marginTop="48dp"
-                android:layout_marginEnd="80dp"
+                android:layout_marginStart="46dp"
+                android:layout_marginEnd="46dp"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Cost per year"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="@id/subtypetext"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/subtypetext" />
 
             <EditText
                 android:id="@+id/plafondtext"
-                android:layout_width="250dp"
+                android:layout_width="300dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="80dp"
-                android:layout_marginTop="48dp"
-                android:layout_marginEnd="80dp"
+                android:layout_marginStart="46dp"
+                android:layout_marginEnd="46dp"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Plafond"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="@id/costperyeartext"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/costperyeartext" />
 
             <EditText
                 android:id="@+id/nameoncardtext"
-                android:layout_width="250dp"
+                android:layout_width="300dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="80dp"
-                android:layout_marginTop="48dp"
-                android:layout_marginEnd="80dp"
+                android:layout_marginStart="46dp"
+                android:layout_marginEnd="46dp"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Name on card"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="@id/plafondtext"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/plafondtext" />
 
             <EditText
                 android:id="@+id/numbertext"
-                android:layout_width="250dp"
+                android:layout_width="300dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="80dp"
-                android:layout_marginTop="48dp"
-                android:layout_marginEnd="80dp"
+                android:layout_marginStart="46dp"
+                android:layout_marginEnd="46dp"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Number"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="@id/nameoncardtext"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/nameoncardtext" />
 
             <EditText
                 android:id="@+id/validuntiltext"
-                android:layout_width="250dp"
+                android:layout_width="300dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="80dp"
-                android:layout_marginTop="48dp"
-                android:layout_marginEnd="80dp"
+                android:layout_marginStart="46dp"
+                android:layout_marginEnd="46dp"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Valid until"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="@id/numbertext"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/numbertext" />
 
             <EditText
                 android:id="@+id/cvctext"
-                android:layout_width="250dp"
+                android:layout_width="300dp"
                 android:layout_height="50dp"
-                android:layout_marginStart="80dp"
-                android:layout_marginTop="48dp"
-                android:layout_marginEnd="80dp"
+                android:layout_marginStart="46dp"
+                android:layout_marginEnd="46dp"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="CVC"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="@id/validuntiltext"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/validuntiltext" />
 
             <Button
                 android:id="@+id/sendrequest"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="350dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="55dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="50dp"
                 android:text="Enviar pedido"
-                android:textSize="25dp"
+                android:textSize="20dp"
+                android:background="@drawable/buttonshape"
+                android:textColor="@color/white"
+                app:backgroundTint="#7f0000"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintHorizontal_bias="0.863"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/cvctext"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/cvctext" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
