--- a/app/src/main/res/layout/fragment_credit_card.xml
+++ b/app/src/main/res/layout/fragment_credit_card.xml
@@ -25,7 +25,7 @@
                 android:text="Cartões"
                 android:textColor="@color/black"
                 android:textSize="25dp"
-                app:layout_constraintStart_toEndOf="@+id/button11"
+                app:layout_constraintStart_toEndOf="@+id/returnbutton"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -41,7 +41,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
             <Button
-                android:id="@+id/button11"
+                android:id="@+id/returnbutton"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="20dp"
