--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -77,7 +77,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/textView12"
+                android:id="@+id/ultimospagamentostext"
                 android:layout_width="360dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="20dp"
@@ -94,7 +94,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textsaldo" />
 
             <TextView
-                android:id="@+id/textView13"
+                android:id="@+id/ultimospagamentos"
                 android:layout_width="360dp"
                 android:layout_height="150dp"
                 android:layout_marginStart="20dp"
@@ -103,7 +103,7 @@
                 android:text="TextView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView12" />
+                app:layout_constraintTop_toBottomOf="@+id/ultimospagamentostext" />
 
             <Button
                 android:id="@+id/button5"
@@ -138,11 +138,11 @@
                 android:layout_height="60dp"
                 android:background="@drawable/ic_credit_card"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/button9"
+                app:layout_constraintEnd_toStartOf="@+id/gosettings"
                 app:layout_constraintStart_toEndOf="@+id/button7" />
 
             <Button
-                android:id="@+id/button9"
+                android:id="@+id/gosettings"
                 android:layout_width="80dp"
                 android:layout_height="60dp"
                 android:background="@drawable/ic_settings"
