--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -13,83 +13,8 @@
             android:layout_height="match_parent"
             tools:context=".MainActivity">
 
-            <EditText
-                android:id="@+id/editTextDate"
-                android:layout_width="300dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="40dp"
-                android:ems="10"
-                android:gravity="center"
-                android:inputType="date"
-                android:text="Data de Pagamento"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />
-
-            <EditText
-                android:id="@+id/editTextTextPersonName2"
-                android:layout_width="300dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="150dp"
-                android:layout_marginEnd="40dp"
-                android:ems="10"
-                android:gravity="center"
-                android:inputType="textPersonName"
-                android:text="Conta"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <EditText
-                android:id="@+id/editTextTextPersonName3"
-                android:layout_width="300dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="40dp"
-                android:ems="10"
-                android:gravity="center"
-                android:inputType="textPersonName"
-                android:text="Referência"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
-
-            <EditText
-                android:id="@+id/editTextTextPersonName4"
-                android:layout_width="300dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="40dp"
-                android:ems="10"
-                android:gravity="center"
-                android:inputType="textPersonName"
-                android:text="Código"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />
-
-            <EditText
-                android:id="@+id/editTextTextPersonName5"
-                android:layout_width="300dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="40dp"
-                android:ems="10"
-                android:gravity="center"
-                android:inputType="textPersonName"
-                android:text="Valor"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
-
             <TextView
-                android:id="@+id/textView15"
+                android:id="@+id/pagemntostext"
                 android:layout_width="150dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="10dp"
@@ -98,11 +23,11 @@
                 android:textSize="25dp"
                 android:gravity="center"
                 android:textColor="@color/black"
-                app:layout_constraintStart_toEndOf="@+id/button14"
+                app:layout_constraintStart_toEndOf="@+id/returnbutton"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/button14"
+                android:id="@+id/returnbutton"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="20dp"
@@ -112,23 +37,64 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/button15"
+                android:id="@+id/efetuarpagamento"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="30dp"
-                android:layout_marginTop="120dp"
                 android:layout_marginEnd="30dp"
-                android:layout_marginBottom="135dp"
-                android:text="Confirmar Pagamento"
+                android:layout_marginBottom="50dp"
+                android:background="@drawable/buttonshape"
+                android:text="Efetuar um Pagamento"
                 android:textColor="@color/white"
                 android:textSize="20sp"
-                android:background="@drawable/buttonshape"
                 app:backgroundTint="#7f0000"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/payrecyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="60dp"
+                app:layout_constraintBottom_toTopOf="@+id/efetuarpagamento"
+                app:layout_constraintTop_toBottomOf="@+id/pagemntostext"
+                app:layout_constraintVertical_bias="0.135"
+                tools:layout_editor_absoluteX="-16dp" />
+
+            <Button
+                android:id="@+id/pagedown"
+                android:layout_width="175dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="3dp"
+                android:background="#7f0000"
+                android:text="Página Anterior"
+                android:textColor="@color/white"
+                android:textSize="15dp"
+                app:layout_constraintEnd_toStartOf="@+id/pageup"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextDate" />
+                app:layout_constraintTop_toBottomOf="@+id/pagemntostext" />
+            <Button
+                android:id="@+id/pageup"
+                android:layout_width="175dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="3dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="20dp"
+                android:background="#7f0000"
+                android:text="Página Seguinte"
+                android:textColor="@color/white"
+                android:textSize="15dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/pagedown"
+                app:layout_constraintTop_toBottomOf="@+id/pagemntostext" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
     </FrameLayout>
 </layout>
