--- a/app/src/main/res/layout/fragment_select_account.xml
+++ b/app/src/main/res/layout/fragment_select_account.xml
@@ -16,7 +16,7 @@
             tools:context=".MainActivity">
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/selecionarconta"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="20dp"
@@ -43,7 +43,7 @@
                 android:textSize="15dp"
                 app:layout_constraintEnd_toStartOf="@+id/pageup"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                app:layout_constraintTop_toBottomOf="@+id/selecionarconta" />
 
             <Button
                 android:id="@+id/pageup"
@@ -58,7 +58,7 @@
                 android:textSize="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/pagedown"
-                app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                app:layout_constraintTop_toBottomOf="@+id/selecionarconta" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view"
