--- a/app/src/main/res/layout/fragment_creat_card.xml
+++ b/app/src/main/res/layout/fragment_creat_card.xml
@@ -28,31 +28,19 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/idtext"
-                android:layout_width="300dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="46dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="46dp"
-                android:ems="10"
-                android:gravity="center"
-                android:hint="ID"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/creatcardtext" />
-
-            <EditText
                 android:id="@+id/accounttext"
                 android:layout_width="300dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="46dp"
+                android:layout_marginTop="100dp"
                 android:layout_marginEnd="46dp"
                 android:ems="10"
                 android:gravity="center"
                 android:hint="Account"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.526"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/idtext" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
                 android:id="@+id/usertext"
