--- a/app/src/main/res/layout/fragment_acc_list.xml
+++ b/app/src/main/res/layout/fragment_acc_list.xml
@@ -24,8 +24,8 @@
                 android:textColor="@color/black"
                 android:textSize="25dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintLeft_toRightOf="@+id/returnbutton"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/returnbutton"/>
 
             <Button
                 android:id="@+id/pagedown"
